Migliorie ulteriori, aggiunto il padding e sembra che da pc sia piacevole da vedere. Ora Provo a vedere se si puo' far collassare l'intestazione, altrimenti bruh Prima di far casini meglio se faccio un commit

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,3 +1,5 @@
+/* Fervojo:		https://fontesk.com/fervojo-typeface/		*/
+
 @font-face {
 	font-family: "Fervojo-Regular";
 	src: url('../fonts/Fervojo-Regular.otf');
