Sono riuscito ad aggiungere la sezione dei tag e degli articoli, esattamente come da progetto uno accanto all'altro. Ora devo dare un po' di look e colore come si deve.

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,8 +34,21 @@ body {
 	text-align: right;
 }
 
+#tags {
+	width: 50%;
+	float: left;
+}
+
+#articles {
+	width: 50%;
+	float: right;
+}
+
+
 footer {
 	font-size: 0.5em;
+	width: 500px;
+	clear: right;
 }
 
 footer a:link {
