--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -2,36 +2,30 @@
 
 @font-face {
 	font-family: "Fervojo-Regular";
-	src: url('../fonts/Fervojo-Regular.otf');
-	format("opentype");	
+	src: url('../fonts/Fervojo-Regular.otf') format("opentype");	
 }
 
 @font-face {
 	font-family: "Fervojo-Bold";
-	src: url('../fonts/Fervojo-Bold.otf');
-	format("opentype");
+	src: url('../fonts/Fervojo-Bold.otf') format("opentype");
 }
 
 @font-face {
 	font-family: "Fervojo-Demi";
-	src: url('../fonts/Fervojo-Demi.otf');
-	format("opentype");
+	src: url('../fonts/Fervojo-Demi.otf') format("opentype");
 }
 
 @font-face {
 	font-family: "Fervojo-Light";
-	src: url('../fonts/Fervojo-Light.otf');
-	format("opentype");
+	src: url('../fonts/Fervojo-Light.otf')format("opentype");
 }
 
 @font-face {
 	font-family: "Fervojo-Medium";
-	src: url('../fonts/Fervojo-Medium.otf');
-	format("opentype");
+	src: url('../fonts/Fervojo-Medium.otf')	format("opentype");
 }
 
 @font-face {
 	font-family: "Fervojo-Thin";
-	src: url('../fonts/Fervojo-Thin.otf');
-	format("opentype");
+	src: url('../fonts/Fervojo-Thin.otf') format("opentype");
 }
