--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,9 @@ body {
 	padding-right: 5%;
 }
 
+
+/*#################### HEADER ####################*/
+
 #main_title {
 	font-size: 3.125em;
 	font-family: Fervojo-Bold;
@@ -34,6 +37,12 @@ body {
 	text-align: right;
 }
 
+
+
+/*#################### MAIN ####################*/
+
+
+
 #tags {
 	width: 50%;
 	float: left;
@@ -44,6 +53,21 @@ body {
 	float: right;
 }
 
+@media (max-width: 500px){
+
+	#tags {
+		width: 100%;
+		float: none;
+	}
+
+	#articles {
+		width: 100%;
+		float: none;
+	}
+}
+
+
+/*#################### FOOTER ####################*/
 
 footer {
 	font-size: 0.5em;
