--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,17 @@ body {
 
 /*#################### HEADER ####################*/
 
+#under_con {
+
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-left: 0px;
+	padding-right: 0px;
+	background-color: #0040ff;
+	border-style: double;
+	text-align: right;
+}
+
 #main_title {
 	font-size: 3.125em;
 	font-family: Fervojo-Bold;
@@ -51,19 +62,6 @@ body {
 #articles {
 	width: 50%;
 	float: right;
-}
-
-@media (max-width: 500px){
-
-	#tags {
-		width: 100%;
-		float: none;
-	}
-
-	#articles {
-		width: 100%;
-		float: none;
-	}
 }
 
 
