--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -66,3 +66,10 @@
 	src: url('../fonts/Protique Thin.otf') format("opentype");
 }
 
+
+/* Untold History:	https://fontesk.com/untold-history-font/	*/
+
+@font-face {
+	font-family: "Untold History";
+	src: url('../fonts/Untold History.otf');
+}
