Finito e formattato interamente il primo articolo, creato il collegamento all'index, creati i file vuoti per la pagina random.

--- a/styles/main.css
+++ b/styles/main.css
@@ -87,6 +87,11 @@ body {
 	border-style: double;
 }
 
+.linktitle {
+	text-decoration: none;
+	color: red;
+}
+
 .art_tldr {
 	font-family: "Untold History";
 }
