Le cartelle degli articoli portano la data di pubblicazione, sistemato l'index, fatto sparire Telegram e aggiunto Matrix (devo aggiungere Mastodon), aggiunte due cose al random.

--- a/random/random_desktop.css
+++ b/random/random_desktop.css
@@ -21,8 +21,19 @@
 		display: flex;
 	}
 
-	.colomn {
+	#dino {
+		width: 15%;
+		float: right;
+	}
+
+	#giorgio {
+		float: left;
+		margin: auto;
 		width: 50%;
+	}
+
+	#clean {
+		clear: both;
 	}
 
 	#nyancat {
