--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,10 @@ body {
 
 /*#################### HEADER ####################*/
 
+#noadblock {
+	color: red;
+}
+
 #randompage {
 	color: red;
 	text-decoration: none;
