--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -10,6 +10,10 @@
 
 	/*#################### DESKTOP HEADER ####################*/
 
+	#noadblock {
+		font-size: 0.5em;
+	}
+
 	#randompage {
 		text-decoration: none;
 		color: red;
