Ops, non avevo incluso i file. Dannazione vscode.

--- a/articles/3. 241023/art_desktop.css
+++ b/articles/3. 241023/art_desktop.css
@@ -22,6 +22,7 @@
 		text-align: center;
 		font-family: Fervojo-Bold;
 		margin-bottom: 0%;
+		padding-top: 3%;
 	}
 
 	#subtitle {
@@ -30,9 +31,7 @@
 		margin-top: 3%;
 	}
 
-	#stuff > p {
-		font-size: 1.2em;
-	}
+
 
 	#timedate {
 		float: right;
