--- a/articles/3. 241023/art.css
+++ b/articles/3. 241023/art.css
@@ -1,5 +1,7 @@
 body {
 	font-family: Fervojo-Regular;
+	background-color: #1a1a1a;
+	color: white;
 }
 
 #home {
@@ -22,9 +24,4 @@ body {
 
 #timedate {
 	color: #36454F;
-}
-
-#si_gode {
-	margin-right: auto;
-	margin-left: auto;
 }
