--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -71,7 +71,7 @@
 	#tags {
 		width: 100%;
 		float: none;
-		order: 2;
+		order: 3;
 		margin-top: 10%;
 	}
 
@@ -123,6 +123,11 @@
 		font-size: 0.6em;
 	}
 
+	#mastofeed {
+		order: 2;
+		width: 100%;
+		margin-top: 10%;
+	}
 
 	/*#################### MOBILE FOOTER ####################*/
 
