--- a/random/random_mobile.css
+++ b/random/random_mobile.css
@@ -21,6 +21,13 @@
 		flex-direction: column;
 	}
 
+	#brokenMine {
+		width: 100%;
+		height: 10S0%;
+		margin: auto;
+		padding-bottom: 10%;
+	}
+
 	#giorgio {
 		margin: auto;
 		padding-bottom: 10%;
