--- a/templates/art_template.html
+++ b/templates/art_template.html
@@ -7,15 +7,15 @@
 		<meta charset="UTF-8">
 
 		<link href="../styles/fonts.css" rel="stylesheet">
-		<link href="art_template.css" rel="stylesheet">
-		<link href="art_template_desktop.css" rel="stylesheet">
-		<link href="art_template_mobile.css" rel="stylesheet">
+		<link href="../../styles/articles/art.css" rel="stylesheet">
+		<link href="../../styles/articles/art_desktop.css" rel="stylesheet">
+		<link href="../../styles/articles/art_mobile.css" rel="stylesheet">
 	</head>
 
 
 	<body>
-		<a id="home" href="../index.html">⬅️ Home</a>
-		<a id="random" href="../random.html">Random 𖦹</a>
+		<a id="home" href="../../index.html">⬅️ Home</a>
+		<a id="random" href="../../random.html">Random 𖦹</a>
 
 		<p id="title">Titolo</p>
 		<p id="subtitle"> Sottotitolo / TL;DR</p>
