Aggiunto il cimitero e migliorato un paio di altre cosette

--- a/templates/art_template.html
+++ b/templates/art_template.html
@@ -15,7 +15,7 @@
 
 	<body>
 		<a id="home" href="../../index.html">⬅️ Home</a>
-		<a id="random" href="../../random.html">Random 𖦹</a>
+		<a id="random" href="../../random/random.html">Random 𖦹</a>
 
 		<p id="title">Titolo</p>
 		<p id="subtitle"> Sottotitolo / TL;DR</p>
